[gd_scene load_steps=7 format=2]

[ext_resource path="res://Beam/Beam.gd" type="Script" id=1]
[ext_resource path="res://Beam/beam.wav" type="AudioStream" id=2]

[sub_resource type="Shader" id=3]
code = "shader_type spatial;

const float anim_speed = 5.0;

void fragment() {
	vec4 world_vertex = CAMERA_MATRIX * vec4(VERTEX, 1.0);
	float intensity = 0.5 +  abs(sin(world_vertex.y - anim_speed*TIME));
	ALBEDO = vec3(intensity,intensity,intensity/3.0);
	ALPHA = 0.25;
	//ALPHA = 0.25 + 0.75*abs(sin(world_vertex.y - 3.0*TIME));
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
albedo_color = Color( 0.870588, 0.87451, 0, 0.0980392 )

[sub_resource type="CylinderShape" id=2]
height = 10.0
radius = 1.5

[node name="Beam" type="Area"]
input_ray_pickable = false
script = ExtResource( 1 )

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
radius = 1.5
height = 10.0
sides = 32
material = SubResource( 4 )

[node name="CylinderBottom" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0739875, 0 )
radius = 1.45
height = 0.2
sides = 32
material = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 2 )

[node name="BeamSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 6.0
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Beam_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Beam_body_exited"]
